# fwbw_prosa

./: BaseMatrix.cpp  BaseMatrix.h  CMakeCache.txt  CMakeLists.txt  FindASan.cmake  FwBwAligner.cpp  FwBwAligner.h  FwBw_python.cpp  Makefile  README.md  S.txt  ScoreMatrix.h  Sequence.h  SubstitutionMatrix.cpp  SubstitutionMatrix.h  Util.h  cmake_install.cmake  fwbw  main.cpp  show_mat.py  zmForward.txt
cacode/: Makefile  cmake_install.cmake
data/: aa.fasta  ss.fasta
